logo is in square, we have to set no overflow, to avoid overflowing outside the header

--- a/themes/cpk-devel/less/parts/header.less
+++ b/themes/cpk-devel/less/parts/header.less
@@ -56,6 +56,9 @@ header {
     .navbar-brand {
       margin-top: 0;
       padding-top: 7px;
+      //logo is in square, we have to set no overflow, to avoid overflowing
+      //outside the header
+      overflow: hidden;
     }
     .red-box {
       padding-bottom: 0;
